# moos-ivp-lab-14

./: .gitignore  README  presentation.odp  presentation.ppt
lib/: libBHV_SimpleWaypoint.dylib
missions/lab14/: README  hazards.txt  hazards_comp_one.txt  hazards_set1.txt  hazards_simple.txt  launch_archie.sh  launch_betty.sh  launch_vehicle.sh  launch_vehicle2.sh  meta_archie.bhv  meta_archie.moos  meta_betty.bhv  meta_betty.moos  meta_shoreside.moos  plug_pHandleSensorData.moos  plug_pHelmIvP.moos  plug_pLogger.moos  plug_uFldNodeBroker.moos  plug_uXMS.moos
pCoordinator/: Coordinator_ExampleConfig.cpp  pCoordinator.moos
src/: CMakeLists.txt
src/pCoordinator/: CMakeLists.txt  Coordinator.cpp  Coordinator.h  Coordinator_ExampleConfig.h  Order.h  Point2D.h  main.cpp
src/pFollowOrders/: CMakeLists.txt  FollowOrders.cpp  FollowOrders.h  FollowOrders_ExampleConfig.cpp  FollowOrders_ExampleConfig.h  main.cpp  pFollowOrders.moos
src/pHandleSensorData/: CMakeLists.txt  HandleSensorData.cpp  HandleSensorData.h  HandleSensorData_ExampleConfig.cpp  HandleSensorData_ExampleConfig.h  main.cpp  pHandleSensorData.moos
src/shared/: MarkerMap.h  Order.h  Point2D.h  PriorityNode.h  UUO.h
src/utils/: CMakeLists.txt
src/utils/histToMatlab/: CMakeLists.txt  histToMatlab.cpp
